# simple-video-tagger

./: .flake8  .gitignore  LICENSE  README.md  build_dmg.sh  macos.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/: settings.yaml
resources/icons/: icon.icns
src/video_tagger/: cell_3d_cuboid.py  cell_action_tag_manager.py  config.py  database.py  overlay_label.py  tag_manager.py  tag_manager_json.py  tag_slider.py  time_label.py  utils.py  version.py  video_player.py  video_tagger.py
tests/: test_video_tagger.py
